--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "test": "karma start",
     "test-travis": "karma start --browsers='bs_firefox_mac,bs_chrome_mac' --singleRun",
     "lint": "tslint -p . -t verbose",
-    "make-version": "sh -c ./scripts/make-version"
+    "make-version": "sh -c ./scripts/make-version",
+    "postinstall": "./scripts/build-npm.sh",
   },
   "browserify-shim": {
     "deeplearn": "global:dl"
