--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "test-travis": "karma start --browsers='bs_firefox_mac,bs_chrome_mac' --singleRun",
     "lint": "tslint -p . -t verbose",
     "make-version": "sh -c ./scripts/make-version",
-    "postinstall": "./scripts/build-npm.sh",
+    "postinstall": "./scripts/build-npm.sh"
   },
   "browserify-shim": {
     "deeplearn": "global:dl"
